# boxarr-2026

./: Boxarr - Dev Spec 1.md  CLAUDE.md  pyproject.toml  requirements-prod.txt  requirements.txt
config/: default.yaml
src/: main.py
src/api/: app.py
src/api/routes/: boxoffice.py  config.py  movies.py  scheduler.py  web.py
src/core/: __init__.py  boxoffice.py  exceptions.py  json_generator.py  radarr.py  scheduler.py
src/utils/: config.py
src/web/static/js/: app.js
src/web/templates/: dashboard.html  setup.html  weekly.html
tests/unit/: test_trakt.py  test_trakt_matching.py
